--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -13,7 +13,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/registrationNameLayout"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:padding="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -26,7 +27,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/registrationNameConfirmLayout"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:padding="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -44,7 +46,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/registrationPasswordLayout"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:padding="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -57,7 +60,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/registrationPasswordConfirmLayout"
-            android:layout_weight="0.5">
+            android:layout_weight="0.5"
+            android:padding="5dp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
