--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,9 +61,9 @@
             android:text="@string/loginButton"
             android:layout_marginEnd="@dimen/loginFormMargin" />
         <Button
-            android:id="@+id/signInButton"
+            android:id="@+id/signUpButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/signInButton" />
+            android:text="@string/signUpButton" />
     </LinearLayout>
 </LinearLayout>
