--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/registrationForm"
-    tools:context=".RegistrationFragment">
+    tools:context=".RegistrationActivity">
 
     <TableRow
         android:layout_width="match_parent"
