--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -8,5 +8,9 @@
         android:title="@string/user_account"
         android:icon="@drawable/ic_baseline_account_circle_24"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        app:showAsAction="never" />
 
 </menu>
