--- a/app/src/main/res/menu/top_app_bar.xml
+++ b/app/src/main/res/menu/top_app_bar.xml
@@ -11,6 +11,7 @@
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
+        android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="never" />
 
 </menu>
