--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+    <style name="Theme.App" parent="Theme.Material3.DayNight">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
 </resources>
