--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/my_trips"
-        android:title="@string/my_trips"
-        android:icon="@drawable/ic_baseline_image_24"
-        android:checkable="false" />
+        android:id="@+id/my_trips_item"
+        android:title="@string/my_trips">
+        <menu>
+            <item
+                android:id="@+id/my_trips"
+                android:title="@string/my_trips"
+                android:icon="@drawable/ic_baseline_image_24"
+                android:checkable="false" />
+            <item
+                android:id="@+id/shared_trips"
+                android:title="@string/shared_trips"
+                android:icon="@drawable/ic_baseline_people_24"
+                android:checkable="false" />
+            <item
+                android:id="@+id/favorites"
+                android:title="@string/favorite_trips"
+                android:icon="@drawable/ic_baseline_favorite_24" />
+        </menu>
+    </item>
     <item
-        android:id="@+id/shared_trips"
-        android:title="@string/shared_trips"
-        android:icon="@drawable/ic_baseline_people_24"
-        android:checkable="false" />
+        android:id="@+id/trip_groups_item"
+        android:title="@string/trip_groups">
+        <menu>
+        </menu>
+    </item>
 </menu>
