--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -14,12 +14,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
             android:id="@+id/main_trip_picture"
-            android:src="@drawable/ic_baseline_account_circle_24" />
+            android:src="@drawable/ic_baseline_account_circle_24"
+            android:contentDescription="@string/trip_image"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
