--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:clickable="true"
+    android:focusable="true"
     style="?attr/materialCardViewFilledStyle">
 
     <LinearLayout
@@ -32,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/trip_name"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
-                android:text="title"/>
+                android:text="title" />
             <TextView
                 android:id="@+id/trip_location"
                 android:layout_width="wrap_content"
