Added image picker from https://developer.android.com/training/data-storage/shared/photopicker#customize Not working, bug may be fixed shortly?

--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -10,7 +10,8 @@
         android:layout_height="300dp"
         android:src="@drawable/ic_baseline_add_photo_alternate_24"
         android:scaleType="fitCenter"
-        android:contentDescription="@string/new_images_button_description"/>
+        android:contentDescription="@string/new_images_button_description"
+        android:id="@+id/trip_images_button"/>
 
     <TableRow
         android:layout_width="match_parent"
