Now using the Navigation Component, refactored whole project to implement proper usage

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/registration_form"
-    tools:context=".RegistrationActivity">
+    tools:context=".RegistrationFragment">
 
     <TableRow
         android:layout_width="match_parent"
