--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -1,82 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".NewTripFragment">
 
     <ImageButton
+        android:id="@+id/trip_images_button"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@drawable/ic_baseline_add_photo_alternate_24"
-        android:scaleType="fitCenter"
         android:contentDescription="@string/new_images_button_description"
-        android:id="@+id/trip_images_button"/>
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_baseline_add_photo_alternate_24" />
 
-    <TableRow
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="0.5"
-            android:padding="5dp">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/trip_name"
-                android:inputType="text"
-                android:id="@+id/trip_name" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_weight="0.5"
+                android:padding="5dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="0.5"
-            android:padding="5dp">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/trip_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/trip_name"
+                    android:inputType="text" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/trip_destination"
-                android:inputType="textAutoComplete"
-                android:id="@+id/trip_destination" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </TableRow>
-    <TableRow
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_weight="0.5"
+                android:padding="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/trip_destination"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/trip_destination"
+                    android:inputType="textAutoComplete" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_weight="0.5"
+                android:padding="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/trip_start_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/trip_start_date"
+                    android:inputType="date" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_weight="0.5"
+                android:padding="5dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/trip_end_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/trip_end_date"
+                    android:inputType="date" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </TableRow>
+    </TableLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="0.5"
-            android:padding="5dp">
+        <EditText
+            android:id="@+id/trip_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:autofillHints="none"
+            android:gravity="start|top"
+            android:hint="@string/trip_description"
+            android:inputType="text" />
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/save_new_trip_button"
+            style="?attr/floatingActionButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:contentDescription="@string/save_new_trip_button"
+            app:srcCompat="@drawable/ic_baseline_check_24" />
+    </FrameLayout>
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/trip_start_date"
-                android:inputType="date"
-                android:id="@+id/trip_start_date" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_weight="0.5"
-            android:padding="5dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="@string/trip_end_date"
-                android:inputType="date"
-                android:id="@+id/trip_end_date" />
-        </com.google.android.material.textfield.TextInputLayout>
-    </TableRow>
-    <EditText
-        android:id="@+id/trip_description"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="@string/trip_description"
-        android:gravity="start|top"
-        android:inputType="text"
-        android:autofillHints="none"/>
-</TableLayout>
+</LinearLayout>
