--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".NewTripFragment">
+    tools:context=".fragments.NewTripFragment">
 
     <ImageButton
         android:id="@+id/trip_images_button"
