--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".TripsFragment">
+    tools:context=".fragments.TripsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
