Moved settings button to navigation drawer

--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -26,4 +26,9 @@
         <menu>
         </menu>
     </item>
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        android:icon="@drawable/ic_baseline_settings_24">
+    </item>
 </menu>
