Added settings fragment

--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -65,4 +65,8 @@
             app:argType="string"
             android:defaultValue="@null" />
     </fragment>
+    <fragment
+        android:id="@+id/settings"
+        android:name="it.units.simandroid.progetto.fragments.SettingsFragment"
+        android:label="@string/settings" />
 </navigation>
