--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,16 +13,16 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:layout_marginBottom="@dimen/login_form_margin"
-        android:id="@+id/login_username_layout">
+        android:id="@+id/login_username_layout"
+        android:minWidth="200dp"
+        android:minHeight="48dp"
+        android:hint="@string/username">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_username_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/username"
-            android:inputType="textEmailAddress"
-            android:minWidth="200dp"
-            android:minHeight="48dp">
+            android:inputType="textEmailAddress">
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -32,16 +32,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:layout_marginBottom="@dimen/login_form_margin">
+        android:layout_marginBottom="@dimen/login_form_margin"
+        android:minWidth="200dp"
+        android:minHeight="48dp"
+        android:hint="@string/password">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_password_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:minWidth="200dp"
-            android:minHeight="48dp">
+            android:inputType="textPassword">
 
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
